--- a/syles/style.css
+++ b/syles/style.css
@@ -1,5 +1,6 @@
 *{
     padding: 0;
+    margin: 0;
     background: red;
 }
 #container{
@@ -10,6 +11,7 @@
     border: 2px solid black;
 }
 .cubo{
+    padding: 0;
     width: 100%;
     border: 3px solid black;
 }
@@ -27,7 +29,7 @@
     background: yellow;
 }
 .cubo:nth-child(6){
-   grid-area: 2/6/4/5;
+   grid-area: 2/6/5/5;
 
     background: yellow;
 }
